--- a/example.bib
+++ b/example.bib
@@ -753,14 +753,6 @@ L'eau est un liquide dont les propriétés sont extraordinaires. Elle a une trè
   doi = {10.1103/PhysRevLett.85.4253},
   url = {https://link.aps.org/doi/10.1103/PhysRevLett.85.4253}
 }
-@ARTICLE{IVS08,
-    author = {I. V. Stiopkin and H. D. Jayathilake and A. N. Bordenyuk and A. V. Benderskii},
-    title = {{Heterodyne-Detected Vibrational Sum Frequency Generation Spectroscopy}},
-    journal = {J. Am. Chem. Soc.},
-    year = {2008},
-    volume = {130},
-    pages = {2271}
-}
 @ARTICLE{VO05,
     author = {V. Ostroverkhov and G. A. Waychunas and Y. R. Shen },
     title = {{New information on water interfacial structure revealed by phase-sensitive surface spectroscopy}},
@@ -4558,7 +4550,9 @@ To obtain the vibrations with the highest frequecies $\nu_\text{max}$, the sampl
     journal = {J. Am. Chem. Soc.},
     year = {2008},
     volume = {130},
-    pages = {2271}
+    pages = {2271--2275},
+    doi = {10.1021/ja076708w},
+    url = {https://doi.org/10.1021/ja076708w}
 }
 @ARTICLE{CAM08,
     author = {C. A. Marx and U. Harbola and S. Mukamel},
@@ -4798,14 +4792,6 @@ To obtain the vibrations with the highest frequecies $\nu_\text{max}$, the sampl
   volume = {9},
   pages = {3970-3977},
   doi={10.1039/C8SC00854J},
-}
-@ARTICLE{SG05,
-    author = {S. Gopalakrishnan and  P. Jungwirth and D. Tobias and H. Allen},
-    title = {{Air-liquid interfaces of aqueous solutions containing ammonium and sulfate: Spectroscopic and molecular dynamics studies}},
-    journal = {J. Phys. B},
-    year = {2005},
-    volume = {109},
-    pages = {8861}
 }
 @ARTICLE{Tobias2008,
     author = {D. Tobias and J. C. Hemminger},
