--- a/main.tex
+++ b/main.tex
@@ -331,8 +331,6 @@ Wässrige Nitratlösungen von \abinitio Molecular Dynamics} % Your thesis title,
 The interfacial structure and dynamics of solutions containing alkaline nitrates and alkaline halides have been studied by density functional theory-based 
 molecular dynamics (DFTMD) simulations. We have presented a detailed analysis of the hydrogen bond (HB) structure at the interface and 
 have calculated the interface vibrational sum-frequency generation (VSFG) spectra to provide a molecular interpretation of available experimental data.
-%The calculation of the correlation between the dipole moment and the polarization is 
-%transformed into the calculation of the velocity auto-correlation function (VACF).
 
 %
 Both the measured and calculated VSFG spectra of alkaline nitrate solution show a reduced intensity in the lower frequency portion,
@@ -345,19 +343,19 @@ realistic models of the interface are required to address the perturbation of th
 Heavier halide anions have a similar effect to nitrate ions on the structure and dynamics of the water/vapor interface.
 From the results of nonlinear susceptibilities, we conclude that water molecules at the interfaces of LiI, NaI, and KI solutions are participating
 in weaker H-bonds, compared with those at the water/vapor interface.
-The origin of the characteristics comes from a unique distribution of \I ions and alkali metal cations,
+This feature comes from a unique distribution of \I ions and alkali metal cations,
 which form a double layer over the thickness on the order of 5--10 \A.
 
+The second aspect which we have investigated is the HB dynamics.
 To analyze the HB dynamics at interfaces, 
 we determined the instantaneous interface based on spatial density, 
 and proposed a statistical scheme based on the interfacial HB (IHB) population for the instantaneous interface.
-Combining the IHB method with interfacial molecule sampling (IMS), we have obtained more realistic HB dynamics for the water/vapor interface.
-This combination gives a method to determine the thickness of the water/vapor interface.
+Combining the IHB method with interfacial molecule sampling (IMS), we have obtained a method to determine the thickness of the water/vapor interface.
 The IHB method can also be extended to the solvation shells of ions in aqueous solutions.
 
 Finally, the distribution of the number of H-bonds per OH group at a given instantaneous interface promotes our understanding of the difference between the alkaline nitrate
 solution/vapor and the water/vapor interfaces. In particular, the ratio of free OH bonds for interfaces affects the decay rate of the reorientation relaxation of water
-molecules and the $\Im \chi^{(2)}$ spectrum of the alkaline nitrate interface.
+molecules and the nonlinear susceptibility spectrum $\Im \chi^{(2)}$ of the alkaline nitrate interface.
 \end{abstract}
 
 %----------------------------------------------------------------------------------------
@@ -369,8 +367,6 @@ molecules and the $\Im \chi^{(2)}$ spectrum of the alkaline nitrate interface.
 Die Grenzflächenstruktur und -dynamik von Lösungen, die alkalische Nitrate und alkalische Halogenide enthalten, wurden auf der Grundlage der Dichtefunktionaltheorie untersucht
 Molekulardynamik (DFTMD)-Simulationen. Wir haben eine detaillierte Analyse der Wasserstoffbrücken(HB)-Struktur an der Grenzfläche vorgelegt und
 haben die Spektren der Grenzflächenschwingungssummenfrequenzerzeugung (VSFG) berechnet, um eine molekulare Interpretation der verfügbaren experimentellen Daten bereitzustellen.
-%Die Berechnung der Korrelation zwischen Dipolmoment und Polarisation ist
-%in die Berechnung der Geschwindigkeits-Autokorrelationsfunktion (VACF) umgewandelt.
 
 Sowohl die gemessenen als auch die berechneten VSFG-Spektren der alkalischen Nitratlösung zeigen eine reduzierte Intensität im unteren Frequenzbereich,
 im Vergleich zur Wasser/Dampf-Grenzfläche.
@@ -381,20 +377,20 @@ realistische Modelle der Grenzfläche sind erforderlich, um die Störung des Ion
 
 Schwerere Halogenidanionen haben einen ähnlichen Effekt wie Nitrationen auf die Struktur und Dynamik der Wasser/Dampf-Grenzfläche.
 Aus den Ergebnissen nichtlinearer Suszeptibilitäten schließen wir, dass Wassermoleküle an den Grenzflächen von LiI-, NaI- und KI-Lösungen beteiligt sind
-in schwächeren Wasserstoffbrücken, verglichen mit denen an der Wasser/Dampf-Grenzfläche.
-Der Ursprung der Eigenschaften liegt in einer einzigartigen Verteilung von Jodionen und Alkalimetallkationen,
+in schwächeren H-Brücken, verglichen mit denen an der Wasser/Dampf-Grenzfläche.
+Diese Eigenschaft kommt von einer einzigartigen Verteilung von I-Ionen und Alkalimetallkationen,
 die eine Doppelschicht über die Dicke in der Größenordnung von 5-10 Angström bilden.
 
+Der zweite Aspekt, den wir untersucht haben, ist die HB-Dynamik.
 Um die HB-Dynamik an Grenzflächen zu analysieren,
-Wir haben die momentane Schnittstelle basierend auf der räumlichen Dichte bestimmt,
-und schlug ein statistisches Schema vor, das auf der Grenzflächen-Wasserstoffbrücken(IHB)-Population für die momentane Grenzfläche basiert.
-Durch die Kombination der IHB-Methode mit der Grenzflächenmolekülprobenahme (IMS) haben wir eine realistischere HB-Dynamik für die Wasser/Dampf-Grenzfläche erhalten.
-Diese Kombination ergibt ein Verfahren zur Bestimmung der Dicke der Wasser/Dampf-Grenzfläche.
+wir haben die momentane Schnittstelle basierend auf der räumlichen Dichte bestimmt,
+und schlug ein statistisches Schema basierend auf der Grenzflächen-HB(IHB)-Population für die momentane Grenzfläche vor.
+Durch die Kombination der IHB-Methode mit der Grenzflächenmolekülprobenahme (IMS) haben wir eine Methode zur Bestimmung der Dicke der Wasser/Dampf-Grenzfläche erhalten.
 Die IHB-Methode kann auch auf die Solvathüllen von Ionen in wässrigen Lösungen erweitert werden.
 
 Schließlich fördert die Verteilung der Anzahl von H-Brücken pro OH-Gruppe an einer gegebenen Momentangrenzfläche unser Verständnis des Unterschieds zwischen den alkalischen Nitraten
-Lösung/Dampf und die Wasser/Dampf-Grenzflächen. Insbesondere das Verhältnis der freien OH-Bindungen für Grenzflächen beeinflusst die Abklingrate der Umorientierungsrelaxation von Wasser
-Moleküle und das $\Im \chi^{(2)}$-Spektrum der alkalischen Nitratgrenzfläche.
+Lösung/Dampf und die Wasser/Dampf-Grenzflächen. Insbesondere das Verhältnis der freien OH-Bindungen für Grenzflächen beeinflusst die Abklingrate der Reorientierungsrelaxation von Wasser
+Moleküle und das nichtlineare Suszeptibilitätsspektrum $\Im \chi^{(2)}$ der Alkalinitrat-Grenzfläche.
 \end{extraAbstract}
 }
 \selectlanguage{english}
@@ -409,7 +405,7 @@ Prof. Dr. Marilore Sulpizi for her excellent guidance during my doctoral studies
 I thank her for bringing me into interesting and novel areas of density functional theory-based molecular dynamics simulation 
 and interface physics and chemistry. By communicating with her, I was implicitly and positively affected. 
 She is rigorous in academic studies, optimistic and active, and has a wide range of interests. 
-All these have kept in my heart and gave me greater confidence in future scientific research work.
+All these have kept in my heart and gave me greater confidence in my future work.
 
 %
 I am grateful to Prof. Dr. Friederike Schmid  and Prof. Dr. Kurt Binder for their talks and guidance.
@@ -421,10 +417,11 @@ physics for leading me to the fundamental statistical physics and excellent lect
 I thank Prof. Dr. Harvey Meyer at the institute for nuclear physics. 
 I feel very honored to be a teaching assistant in his quantum field theory course. 
 %
-%I thank Prof. Thomas Record Jr. in University of Wisconsin and Prof. Marie-Pierre Gaigeot in Universit{\'e} Pierre et Marie Curie for useful discussions.
+I thank Prof. Marie-Pierre Gaigeot in Universit{\'e} Pierre et Marie Curie for useful discussions.
 
 %
-I am grateful to R\'emi Khatib for helpful guidance on the programs for calculating the VSFG spectra. I thank Qi Shuanhu, Zhou Jiajia and Yu Fei for useful discussions. 
+I am grateful to Dr. R\'emi Khatib for helpful guidance on the programs for calculating the VSFG spectra. 
+I thank Dr. Qi Shuanhu, Dr. Zhou Jiajia and Dr.Yu Fei for useful discussions. 
 I would like to thank Leila Salimi, Isidro Lorenzo Geada, Santosh Kumar Meena and Anusha Lalitha, 
 at the Institute for Physics, for their assistance.
 %
@@ -435,14 +432,14 @@ The financial supports of the China Scholarship Council and TRR146 are gratefull
 
 %
 I thank Prof. Luo Honggang, Prof. Fang Haiping and Prof. Zhou Haijun for their great help in my study during my doctoral studies. 
-The cooperation and discussions with Shi Guosheng, Shao Junming, Zhou Bo and Wang Chunlei have benefited me a lot. 
+The cooperation and discussions with Dr. Shi Guosheng, Dr. Shao Junming, Dr. Zhou Bo and Dr. Wang Chunlei have benefited me a lot. 
 
 %
-I thank Prof. Jin Yuliang for his support, trust and teachings over the past year.
+I thank Prof. Jin Yuliang for his support, trust and teachings over the past two years.
 
 %
 I would like to thank the following teachers who have benefited me for life:
-Mr. Lu Yongliang, 
+Mr. Lu Yongliang, Mr. Li Yiyou, 
 Mr. Yang Bing, Mr. Chen Jiexian, Mr. Chen Jiangen, Mr. Li Yiji,
 Mr. Wu Xiukui, Mr. Chen Wenfeng, Mr. Liao Changchun, Mr. Zhou Wende,
 Mr. Yan Zhengzhou, Prof. Huang Ruibin, Prof. Ran Qiyin, Prof. Huang Yong, Prof. Luo Zhiquan, Prof. Fan Silin, Prof. Tao Caide, Prof. Ren Weiyi, 
@@ -453,7 +450,6 @@ I am grateful to my parents Diao Yuhua and Huang Dehuai, and my brother Jialiang
 understanding and support for me for decades. 
 This thesis is dedicated to my grandparents Zhong Yuqing, Diao Shengwen, Ma Sufang, and Huang Zongyin. 
 I will always remember the kindness, open-mindedness, diligence and perseverance.
-
 \end{acknowledgements}
 
 %----------------------------------------------------------------------------------------
@@ -596,7 +592,6 @@ $\omega_{\text{e}}$ & the lowest electronic frequency &  \\
 $r_{\text{OO}}^{\text{c}}$ & the maximum value of the interoxygen distance (in the definition of HB) & \\
 $\phi^{\text{c}}$ & the maximum value of the angle between the O--O axis and one of the & \\
                   & O--H bonds (in the definition of HB) & \\
-$m_i$ & molality (bulk or surface) of the ion $i$ & \\
 $N$ & number of water molecules & \\
 $R_{\text{OH}}$ & O-H length in water molecule & \\
 $C_2(t)$ & orientational anisotropy decay & \\
@@ -622,7 +617,6 @@ $\chi^{(2),\text{NR}}$ & second-order nonresonant susceptibility & \\
 $E_{\text{KSDFT}}$ & self consistent KS energy & \\
 $\Delta \nu'$  & shift of vibrational frequency & \\
 $h^\text{k,X}(t)$ & solvation shell HB population operator & \\
-$m_i^*$ & solvent molality & \\
 $\nu_i$ & stoichiometry of ion $i$ & \\
 $\Gamma_i$ & surface excess of component $i$ & \\
 $K_{\text{p,X}}$ & surface/bulk molar concentration ratio of ion X &  \\
@@ -639,6 +633,8 @@ ${\bf v}$ & velocity of an atom & \\
 $C(t)$ & velocity auto-correlation function & \\
 $\nu$ & vibrational frequency, or  vibrational quantum number& \\
 %$K^\ominus$ & thermodynamic equilibrium constant &  \\
+%$m_i$ & molality (bulk or surface) of the ion $i$ & \\
+%$m_i^*$ & solvent molality & \\
 \end{symbols}
 
 %----------------------------------------------------------------------------------------
