--- a/main.tex
+++ b/main.tex
@@ -267,13 +267,14 @@ Wässrige Nitratlösungen von \abinitio Molecular Dynamics} % Your thesis title,
  
 \vfill
 
-\large \textit{A thesis submitted in fulfillment of the requirements\\ for the degree of \degreename}\\[0.3cm] % University requirement text
-\textit{in the}\\[0.4cm]
-\groupname\\\deptname\\[2cm] % Research group name and department name
+	\large \textit{A thesis submitted for the award of the title "Doctor of Natural Sciences"} \\[0.3cm] % University requirement text
+\textit{to the Faculty of}\\[0.4cm]
+Physics, Mathematics and Computer Science of Johannes Gutenberg University Mainz in Mainz
+%\groupname\\\deptname\\[2cm] % Research group name and department name
  
 \vfill
 
-{\large \today}\\[4cm] % Date
+{\large 2021}\\[4cm] % Date
 %\includegraphics{Logo} % University/department logo - uncomment to place it
  
 \vfill
@@ -336,26 +337,26 @@ have calculated the interface vibrational sum-frequency generation (VSFG) spectr
 Both the measured and calculated VSFG spectra of alkaline nitrate solution show a reduced intensity in the lower frequency portion,
 when compared to the water/vapor interface.
 This reduction is attributed to the hydrogen (H-) bonds established between the nitrate and the surrounding water molecules at the interface.
-This effects is only related to the presence of the nitrate at the water surface and is not affected by the presence of alkali metal ions.
+This spectral feature is only related to the presence of the nitrate at the water surface and is not influenced by the alkali metal ions.
 We have shown that, to provide a microscopic interpretation of the spectra,
-realistic models of the interface are required to address the perturbation of the ion at the water surface.
+realistic models of the interface are required beyond the simple cluster models.
 
-Heavier halide anions have a similar effect to nitrate ions on the structure and dynamics of the water/vapor interface.
+Heavier halide anions, such as iodine, have a similar effect to nitrate ions on the structure and dynamics of the water/vapor interface.
 From the results of nonlinear susceptibilities, we conclude that water molecules at the interfaces of LiI, NaI, and KI solutions are participating
 in weaker H-bonds, compared with those at the water/vapor interface.
-This feature comes from a unique distribution of \I ions and alkali metal cations,
+This feature comes from the unique distribution of \I ions and alkali metal cations,
 which form a double layer over the thickness on the order of 5--10 \A.
 
 The second aspect which we have investigated is the HB dynamics.
 To analyze the HB dynamics at interfaces, 
 we determined the instantaneous interface based on spatial density, 
-and proposed a statistical scheme based on the interfacial HB (IHB) population for the instantaneous interface.
+and proposed a statistical scheme based on the interfacial HB (IHB) population for identifying the instantaneous interface.
 Combining the IHB method with interfacial molecule sampling (IMS), we have obtained a method to determine the thickness of the water/vapor interface.
 The IHB method can also be extended to the solvation shells of ions in aqueous solutions.
 
 Finally, the distribution of the number of H-bonds per OH group at a given instantaneous interface promotes our understanding of the difference between the alkaline nitrate
 solution/vapor and the water/vapor interfaces. In particular, the ratio of free OH bonds for interfaces affects the decay rate of the reorientation relaxation of water
-molecules and the nonlinear susceptibility spectrum $\Im \chi^{(2)}$ of the alkaline nitrate interface.
+	molecules and the nonlinear susceptibility spectrum $\Im \chi^{(2)}$ of the alkaline nitrate interface.[NOT CLEAR, REFORMULATE]
 \end{abstract}
 
 %----------------------------------------------------------------------------------------
@@ -401,7 +402,7 @@ Moleküle und das nichtlineare Suszeptibilitätsspektrum $\Im \chi^{(2)}$ der Al
 \begin{acknowledgements}
 \addchaptertocentry{\acknowledgementname} % Add the acknowledgements to the table of contents
 I wish to express my sincere gratitude to my supervisor,
-Prof. Dr. Marilore Sulpizi for her excellent guidance during my doctoral studies, and her detailed and valuable advice for my writing.
+Prof. Dr. Marialore Sulpizi for her excellent guidance during my doctoral studies, and her detailed and valuable advice for my writing.
 I thank her for bringing me into interesting and novel areas of density functional theory-based molecular dynamics simulation 
 and interface physics and chemistry. By communicating with her, I was implicitly and positively affected. 
 She is rigorous in academic studies, optimistic and active, and has a wide range of interests. 
@@ -654,29 +655,28 @@ $\nu$ & vibrational frequency, or  vibrational quantum number& \\
 % Include the chapters of the thesis as separate files from the chapters folder
 % Uncomment the lines as you write the chapters
 
-\include{chapters/chap1/chap1}
-\include{chapters/chap2/chap2} 
-\include{chapters/chap3/chap3} 
-\include{chapters/chap4/chap4} 
-\include{chapters/chap5/chap5} 
-\include{chapters/chap6/chap6} 
-\include{chapters/chap7/chap7} 
+\include{chapters/chap1/chap}
+\include{chapters/chap2/chap} 
+\include{chapters/chap3/chap} 
+\include{chapters/chap4/chap} 
+\include{chapters/chap5/chap} 
+\include{chapters/chap6/chap} 
+\include{chapters/chap7/chap} 
 
 %----------------------------------------------------------------------------------------
 %	THESIS CONTENT - APPENDICES
 %----------------------------------------------------------------------------------------
 
 \appendix % Cue to tell LaTeX that the following "chapters" are Appendices
-
 %% Include the appendices of the thesis as separate files from the Appendices folder
 %% Uncomment the lines as you write the Appendices
 
 %%\include{Appendices/AppendixA}
-\include{chapters/chap_susceptibility/chap_susceptibility}
-\include{chapters/chap_simulations/chap_simulations}
-\include{chapters/chap_hbd/chap_hbd}
-\include{chapters/chap_structure/chap_structure}
-\include{chapters/chap_thickness/chap_thickness}
+\include{chapters/chap_a/chap}
+\include{chapters/chap_b/chap}
+\include{chapters/chap_c/chap}
+\include{chapters/chap_d/chap}
+\include{chapters/chap_e/chap}
 %
 %%\include{chapters/chap_hkt/chap_hkt}
 
